# csc209

Lab1/: compile_all.sh  count  echo_arg  echo_stdin  hello  my_commands.sh  price  price.c
a1/: CMakeLists.txt  count_cells  count_cells.c  image.c  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
a2/: Makefile  mytest  smalloc.c  testhelpers.c
a3/: CMakeLists.txt  crazy  example.txt  helpers.c  parse  parse.c  parse2  pmake.h  ptest  ptest.c  run_make  run_make.c  test.txt  test2
a3test/: CMakeLists.txt  Makefile  mytest.c  parse.c  parse2.c  pmake  pmake.c  run_make.c  simpletest.c  smalloc.h  testhelpers.c
a3test/mytest.dSYM/Contents/Resources/DWARF/: mytest
a3test/pmake.dSYM/Contents/: Info.plist
a3test/pmake.dSYM/Contents/Resources/DWARF/: pmake
a4/: CMakeLists.txt  controller.c  gateway  gateway.c  humidity  humidity.c  temperature  temperature.c
lab0/: CMakeLists.txt  a.out  anotherfile  per-comm.swp  prog  prog.c
lab10/: CMakeLists.txt  Makefile  bufserver  bufserver.c  client1.txt  randclient  readserver  server1.txt
lab11/: CMakeLists.txt  chat_client  chat_client.c  chat_server  chat_server.c  makefile
lab2/: invest  invest.c  phone  phone.c  phone_loop  phone_loop.c  score_card  score_card.c
lab3/: fibonacci  fibonacci.c  outfile  split_array  split_array.c  split_array2  split_array2.c
lab4/: CMakeLists.txt  compare.c  greeting  greeting.c  strip  strip.c  truncate  truncate.c
lab5/: bitmap  bitmap.c  bitmap_printer  bitmap_printer.c
lab6/: copy  copy.c  copy.txt  gdb_example.txt  overflow  typescript
lab7/: childcreates  (+6 more)
(+42 files in other folders)
